--- a/back-end/package.json
+++ b/back-end/package.json
@@ -24,12 +24,12 @@
         "bcrypt": "^5.1.1",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.1",
-        "cors": "^2.8.0",
+        "cors": "^2.8.5",
         "courses_api": "file:",
         "date-fns": "^2.30.0",
         "dotenv": "^16.0.0",
         "express": "^4.21.2",
-        "express-jwt": "^8.4.1",
+        "express-jwt": "^8.5.1",
         "formidable": "^3.5.2",
         "helmet": "^7.2.0",
         "i18next": "^23.7.6",
@@ -37,20 +37,21 @@
         "multer": "^1.4.5-lts.1",
         "next-i18next": "^15.0.0",
         "react-i18next": "^13.4.1",
-        "swagger-jsdoc": "^6.2.0",
-        "swagger-ui-express": "^4.6.0"
+        "swagger-jsdoc": "^6.2.8",
+        "swagger-ui-express": "^4.6.3"
     },
     "devDependencies": {
         "@types/bcrypt": "^5.0.0",
         "@types/body-parser": "^1.19.0",
         "@types/cors": "^2.8.17",
         "@types/express": "^4.17.0",
+        "@types/helmet": "^0.0.48",
         "@types/jest": "^29.5.6",
         "@types/jsonwebtoken": "^9.0.1",
         "@types/multer": "^1.4.12",
         "@types/node": "^18.0.0",
         "@types/swagger-jsdoc": "^6.0.4",
-        "@types/swagger-ui-express": "^4.1.6",
+        "@types/swagger-ui-express": "^4.1.8",
         "jest": "^29.7.0",
         "nodemon": "^2.0.0",
         "prisma": "^5.21.1",
