--- a/package.json
+++ b/package.json
@@ -1,6 +1,8 @@
 {
   "dependencies": {
+    "@prisma/client": "^6.7.0",
     "dotenv": "^16.4.5",
+    "express": "^5.1.0",
     "next": "^15.3.1",
     "next-i18next": "^15.4.2",
     "react": "^18.2.0",
@@ -9,7 +11,12 @@
     "use-interval": "^1.4.0"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.17",
+    "@types/express": "^5.0.1",
+    "@types/helmet": "^0.0.48",
     "@types/node": "^22.15.3",
-    "@types/react": "^19.1.2"
+    "@types/react": "^19.1.2",
+    "@types/swagger-jsdoc": "^6.0.4",
+    "@types/swagger-ui-express": "^4.1.8"
   }
 }
