--- a/front-end/package.json
+++ b/front-end/package.json
@@ -21,6 +21,7 @@
     "react-datepicker": "^4.16.0",
     "react-dom": "^18.3.1",
     "react-i18next": "^13.4.1",
+    "safe-stable-stringify": "^2.5.0",
     "swr": "^2.2.0",
     "use-interval": "^1.4.0"
   },
