--- a/back-end/package.json
+++ b/back-end/package.json
@@ -5,9 +5,6 @@
     "author": "johanpck",
     "license": "ISC",
     "main": "app.ts",
-    "prisma": {
-        "schema": "repository/prisma/schema.prisma"
-    },
     "scripts": {
         "test": "jest",
         "start": "nodemon -L app.ts --delay 3"
@@ -20,7 +17,6 @@
         }
     },
     "dependencies": {
-        "@prisma/client": "^5.21.1",
         "bcrypt": "^5.1.1",
         "bcryptjs": "^2.4.3",
         "body-parser": "^1.20.1",
@@ -34,6 +30,7 @@
         "helmet": "^7.2.0",
         "i18next": "^23.7.6",
         "jsonwebtoken": "^9.0.0",
+        "mongoose": "^8.15.0",
         "next-i18next": "^15.0.0",
         "react-i18next": "^13.4.1",
         "swagger-jsdoc": "^6.2.8",
@@ -53,7 +50,6 @@
         "@types/swagger-ui-express": "^4.1.8",
         "jest": "^29.7.0",
         "nodemon": "^2.0.0",
-        "prisma": "^5.21.1",
         "ts-jest": "^29.1.1",
         "ts-node": "^10.9.0",
         "typescript": "^5.0.0"
