--- a/.github/workflows/main_cloud-native-engineering.yml
+++ b/.github/workflows/main_cloud-native-engineering.yml
@@ -7,6 +7,7 @@ on:
   workflow_dispatch:
 
 jobs:
+  # Backend build and deploy
   build-backend:
     runs-on: ubuntu-latest
     defaults:
@@ -14,26 +15,26 @@ jobs:
         working-directory: ./back-end
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "20.x"
+      - run: npm install
+      - run: npm run build --if-present
 
-      - name: npm install, build, and test (backend)
-        run: |
-          npm install
-          npm run build --if-present
-
-      - name: Zip backend artifact
-        run: zip -r backend.zip ./
-
-      - name: Upload backend artifact
-        uses: actions/upload-artifact@v4
+  deploy-backend:
+    runs-on: ubuntu-latest
+    needs: build-backend
+    steps:
+      - uses: actions/checkout@v4
+      - name: Deploy backend to Azure Web App
+        uses: azure/webapps-deploy@v3
         with:
-          name: backend-artifact
-          path: ./back-end/backend.zip
+          app-name: "cloud-native-backEnd"
+          slot-name: "Production"
+          package: ./back-end
 
+  # Frontend build and deploy
   build-frontend:
     runs-on: ubuntu-latest
     defaults:
@@ -41,60 +42,21 @@ jobs:
         working-directory: ./front-end
     steps:
       - uses: actions/checkout@v4
-
       - name: Set up Node.js
         uses: actions/setup-node@v3
         with:
           node-version: "20.x"
-
-      - name: npm install, build, and test (frontend)
-        run: |
-          npm install
-          npm run build --if-present
-
-      - name: Zip frontend artifact
-        run: zip -r frontend.zip ./
-
-      - name: Upload frontend artifact
-        uses: actions/upload-artifact@v4
-        with:
-          name: frontend-artifact
-          path: ./front-end/frontend.zip
-
-  deploy-backend:
-    runs-on: ubuntu-latest
-    needs: build-backend
-    steps:
-      - name: Download backend artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: backend-artifact
-
-      - name: Unzip backend artifact
-        run: unzip backend.zip
-
-      - name: Deploy backend to Azure Web App
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: "cloud-native-backEnd"
-          slot-name: "Production"
-          package: .
+      - run: npm install
+      - run: npm run build --if-present
 
   deploy-frontend:
     runs-on: ubuntu-latest
     needs: build-frontend
     steps:
-      - name: Download frontend artifact
-        uses: actions/download-artifact@v4
-        with:
-          name: frontend-artifact
-
-      - name: Unzip frontend artifact
-        run: unzip frontend.zip
-
+      - uses: actions/checkout@v4
       - name: Deploy frontend to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
           app-name: "Cloud-Native-Engineering"
           slot-name: "Production"
-          package: .
+          package: ./front-end
