added publish profile

--- a/.github/workflows/main_cloud-native-engineering.yml
+++ b/.github/workflows/main_cloud-native-engineering.yml
@@ -33,6 +33,7 @@ jobs:
           app-name: "cloud-native-backEnd"
           slot-name: "Production"
           package: ./back-end
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BACKEND }}
 
   # Frontend build and deploy
   build-frontend:
