--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,7 +7,9 @@
     "main": "app.ts",
     "scripts": {
         "test": "jest",
-        "start": "nodemon -L app.ts --delay 3"
+        "start": "node app.ts",
+        "dev": "nodemon -L app.ts --delay 3",
+        "test": "jest"
     },
     "nodemonConfig": {
         "ext": "ts",
