--- a/back-end/package.json
+++ b/back-end/package.json
@@ -4,12 +4,11 @@
     "description": "Courses API",
     "author": "johanpck",
     "license": "ISC",
-    "main": "app.ts",
+    "main": "dist/app.js",
     "scripts": {
         "test": "jest",
-        "start": "node app.ts",
-        "dev": "nodemon -L app.ts --delay 3",
-        "test": "jest"
+        "start": "node dist/app.js",
+        "dev": "nodemon -L app.ts --delay 3"
     },
     "nodemonConfig": {
         "ext": "ts",
