--- a/back-end/tsconfig.json
+++ b/back-end/tsconfig.json
@@ -2,8 +2,10 @@
     "compilerOptions": {
         "module": "commonjs",
         "target": "es6",
+        "outDir": "dist",
         "rootDir": "./",
         "strict": true,
+
         "esModuleInterop": true
     }
 }
