--- a/.github/workflows/main_cloud-native-engineering.yml
+++ b/.github/workflows/main_cloud-native-engineering.yml
@@ -20,13 +20,22 @@ jobs:
         with:
           node-version: "20.x"
       - run: npm install
-      - run: npm run build
+      - run: npm run build --if-present
 
   deploy-backend:
     runs-on: ubuntu-latest
     needs: build-backend
+    defaults:
+      run:
+        working-directory: ./back-end
     steps:
       - uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20.x"
+      - run: npm install
+      - run: npm run build
       - name: Deploy backend to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
@@ -34,7 +43,6 @@ jobs:
           slot-name: "Production"
           package: ./back-end
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BACKEND }}
-
   # Frontend build and deploy
   build-frontend:
     runs-on: ubuntu-latest
