--- a/back-end/package.json
+++ b/back-end/package.json
@@ -7,7 +7,8 @@
     "main": "app.ts",
     "scripts": {
         "test": "jest",
-        "start": "ts-node app.ts"
+        "start": "node dist/app.js",
+        "build": "tsc"
     },
     "nodemonConfig": {
         "ext": "ts",
