--- a/.github/workflows/main_cloud-native-engineering.yml
+++ b/.github/workflows/main_cloud-native-engineering.yml
@@ -27,6 +27,9 @@ jobs:
     needs: build-backend
     steps:
       - uses: actions/checkout@v4
+      - name: Install dependencies
+        run: npm install
+        working-directory: ./back-end
       - name: Deploy backend to Azure Web App
         uses: azure/webapps-deploy@v3
         with:
