--- a/.github/workflows/main_cloud-native-engineering.yml
+++ b/.github/workflows/main_cloud-native-engineering.yml
@@ -22,6 +22,11 @@ jobs:
       - run: npm install
       - run: npm run build
 
+      - name: Zip backend package
+        run: |
+          cd back-end
+          zip -r ../back-end.zip .
+
   deploy-backend:
     runs-on: ubuntu-latest
     needs: build-backend
@@ -35,33 +40,33 @@ jobs:
         with:
           app-name: "cloud-native-backEnd"
           slot-name: "Production"
-          package: ./back-end
+          package: back-end.zip
           publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BACKEND }}
 
   # Frontend build and deploy
-  build-frontend:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./front-end
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "20.x"
-      - run: npm install
-      - run: npm run build --if-present
+  # build-frontend:
+  #   runs-on: ubuntu-latest
+  #   defaults:
+  #     run:
+  #       working-directory: ./front-end
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: "20.x"
+  #     - run: npm install
+  #     - run: npm run build --if-present
 
-  deploy-frontend:
-    runs-on: ubuntu-latest
-    needs: build-frontend
-    steps:
-      - uses: actions/checkout@v4
-      - name: Deploy frontend to Azure Web App
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: "Cloud-Native-Engineering"
-          slot-name: "Production"
-          package: ./front-end
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_FRONTEND }}
+  # deploy-frontend:
+  #   runs-on: ubuntu-latest
+  #   needs: build-frontend
+  #   steps:
+  #     - uses: actions/checkout@v4
+  #     - name: Deploy frontend to Azure Web App
+  #       uses: azure/webapps-deploy@v3
+  #       with:
+  #         app-name: "Cloud-Native-Engineering"
+  #         slot-name: "Production"
+  #         package: ./front-end
+  #         publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_FRONTEND }}
