--- a/.github/workflows/main_cloud-native-engineering.yml
+++ b/.github/workflows/main_cloud-native-engineering.yml
@@ -41,8 +41,12 @@ jobs:
         run: npm run build
         working-directory: ./back-end
 
-      - name: Zip artifact for deployment
-        run: zip -r app.zip ./*
+      - name: Prepare deployment package
+        run: |
+          mkdir package
+          cp -r dist node_modules package.json package-lock.json ./package/
+          cd package
+          zip -r ../app.zip .
         working-directory: ./back-end
 
       - name: Deploy backend to Azure Web App
