--- a/.github/workflows/main_cloud-native-engineering.yml
+++ b/.github/workflows/main_cloud-native-engineering.yml
@@ -8,57 +8,11 @@ on:
 
 jobs:
   # Backend build and deploy
-  build-backend:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./back-end
-    steps:
-      - uses: actions/checkout@v4
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "20.x"
-      - run: npm install
-      - run: npm run build
-
-  deploy-backend:
-    runs-on: ubuntu-latest
-    needs: build-backend
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "20.x"
-
-      - name: Install dependencies
-        run: npm install
-        working-directory: ./back-end
-
-      - name: Build the app
-        run: npm run build
-        working-directory: ./back-end
-
-      - name: Prepare deployment package
-        run: |
-          zip -r app.zip dist package.json package-lock.json
-        working-directory: ./back-end
-
-      - name: Deploy backend to Azure Web App
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: "cloud-native-backEnd"
-          slot-name: "Production"
-          package: ./back-end/app.zip
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BACKEND }}
-  # Frontend build and deploy
-  # build-frontend:
+  # build-backend:
   #   runs-on: ubuntu-latest
   #   defaults:
   #     run:
-  #       working-directory: ./front-end
+  #       working-directory: ./back-end
   #   steps:
   #     - uses: actions/checkout@v4
   #     - name: Set up Node.js
@@ -66,17 +20,63 @@ jobs:
   #       with:
   #         node-version: "20.x"
   #     - run: npm install
-  #     - run: npm run build --if-present
+  #     - run: npm run build
 
-  # deploy-frontend:
+  # deploy-backend:
   #   runs-on: ubuntu-latest
-  #   needs: build-frontend
+  #   needs: build-backend
   #   steps:
   #     - uses: actions/checkout@v4
-  #     - name: Deploy frontend to Azure Web App
+
+  #     - name: Set up Node.js
+  #       uses: actions/setup-node@v3
+  #       with:
+  #         node-version: "20.x"
+
+  #     - name: Install dependencies
+  #       run: npm install
+  #       working-directory: ./back-end
+
+  #     - name: Build the app
+  #       run: npm run build
+  #       working-directory: ./back-end
+
+  #     - name: Prepare deployment package
+  #       run: |
+  #         zip -r app.zip dist package.json package-lock.json
+  #       working-directory: ./back-end
+
+  #     - name: Deploy backend to Azure Web App
   #       uses: azure/webapps-deploy@v3
   #       with:
-  #         app-name: "Cloud-Native-Engineering"
+  #         app-name: "cloud-native-backEnd"
   #         slot-name: "Production"
-  #         package: ./front-end
-  #         publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_FRONTEND }}
+  #         package: ./back-end/app.zip
+  #         publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BACKEND }}
+  # Frontend build and deploy
+  build-frontend:
+    runs-on: ubuntu-latest
+    defaults:
+      run:
+        working-directory: ./front-end
+    steps:
+      - uses: actions/checkout@v4
+      - name: Set up Node.js
+        uses: actions/setup-node@v3
+        with:
+          node-version: "20.x"
+      - run: npm install
+      - run: npm run build --if-present
+
+  deploy-frontend:
+    runs-on: ubuntu-latest
+    needs: build-frontend
+    steps:
+      - uses: actions/checkout@v4
+      - name: Deploy frontend to Azure Web App
+        uses: azure/webapps-deploy@v3
+        with:
+          app-name: "Cloud-Native-Engineering"
+          slot-name: "Production"
+          package: ./front-end
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_FRONTEND }}
