--- a/back-end/package.json
+++ b/back-end/package.json
@@ -20,6 +20,8 @@
         }
     },
     "dependencies": {
+        "@azure/functions": "^4.7.1-preview",
+        "@azure/storage-blob": "^12.27.0",
         "@prisma/client": "^5.21.1",
         "bcrypt": "^5.1.1",
         "bcryptjs": "^2.4.3",
