--- a/front-end/Dockerfile
+++ b/front-end/Dockerfile
@@ -7,9 +7,9 @@ RUN npm install
 # Bundle app source
 COPY . .
 # Expose the port the app runs on
-EXPOSE 8080
+EXPOSE 8081
 # Start the app
-CMD [ "npm", "run",  "dev" ]
+CMD [ "npm", "run", "dev", "--", "-H", "0.0.0.0" ]
 
 # build command = docker build -t cloud-native-backend .
 # run command = docker run -p 8080:8080 cloud-native-backend
