--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "swr": "^2.3.3",
-    "use-interval": "^1.4.0"
+    "use-interval": "^1.4.0",
+    "@azure/functions": "^4.7.2"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
