--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -2,7 +2,7 @@
   "name": "",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/src/functions/*.js",
+  "main": "dist/azure-functions/src/functions/HTTPgetUserByEmail/*.js",
   "scripts": {
     "build": "tsc",
     "watch": "tsc -w",
@@ -13,12 +13,18 @@
   },
   "dependencies": {
     "": "file:",
-    "@azure/functions": "^4.7.2"
+    "@azure/functions": "^4.7.2",
+    "@types/mongoose": "^5.11.96",
+    "courses_api": "file:../back-end",
+    "mongoose": "^8.15.0"
   },
   "devDependencies": {
     "@types/node": "18.x",
     "azure-functions-core-tools": "^4.x",
     "rimraf": "^5.0.0",
     "typescript": "^4.0.0"
+  },
+  "compilerOptions": {
+    "skipLibCheck": true
   }
 }
