--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -16,6 +16,7 @@
     "@azure/functions": "^4.7.2",
     "@types/mongoose": "^5.11.96",
     "courses_api": "file:../back-end",
+    "func": "^1.3.5",
     "mongoose": "^8.15.0"
   },
   "devDependencies": {
