--- a/front-end/package.json
+++ b/front-end/package.json
@@ -14,6 +14,7 @@
     "i18next": "^23.7.6",
     "jest-environment-jsdom": "^29.7.0",
     "link": "^2.1.1",
+    "lucide-react": "^0.511.0",
     "next": "^14.2.16",
     "next-i18next": "^15.0.0",
     "react": "^18.3.1",
