--- a/.github/workflows/main_cloud-native-engineering.yml
+++ b/.github/workflows/main_cloud-native-engineering.yml
@@ -1,82 +1,63 @@
-name: Build and deploy Node.js backend & frontend to Azure Web Apps
+name: Deploy Functions and Frontend
 
 on:
   push:
     branches:
       - main
-  workflow_dispatch:
+
+# CONFIGURATION
+# For help, go to https://github.com/Azure/Actions
+#
+# 1. Set up the following secrets in your repository:
+#   AZURE_FUNCTIONAPP_PUBLISH_PROFILE
+#
+# 2. Change these variables for your configuration:
+env:
+  AZURE_FUNCTIONAPP_NAME: "functionCloudNativeGroup25" # set this to your function app name on Azure
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: "./azure-functions/" # set this to the path to your function app project, defaults to the repository root
+  NODE_VERSION: "18.x" # set this to the node version to use (e.g. '8.x', '10.x', '12.x')
 
 jobs:
-  # Backend build and deploy
-  build-backend:
+  upload-site:
     runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./back-end
+
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "20.x"
-      - run: npm install
-      - run: npm run build
+      - name: Checkout Repository
+        uses: actions/checkout@v2
 
-  deploy-backend:
-    runs-on: ubuntu-latest
-    needs: build-backend
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Set up Node.js
-        uses: actions/setup-node@v3
-        with:
-          node-version: "20.x"
-
-      - name: Install dependencies
-        run: npm install
-        working-directory: ./back-end
-
-      - name: Build the app
-        run: npm run build
-        working-directory: ./back-end
-
-      - name: Prepare deployment package
+      - name: Run Upload Script
         run: |
-          zip -r app.zip dist package.json package-lock.json
-        working-directory: ./back-end
+          chmod +x ./upload-site.sh
+          ./upload-site.sh
+        env:
+          AZURE_STORAGE_ACCOUNT: ${{ secrets.AZURE_STORAGE_ACCOUNT }}
+          AZURE_STORAGE_CONTAINER: ${{ secrets.AZURE_STORAGE_CONTAINER }}
+          AZURE_STORAGE_SAS_TOKEN: ${{ secrets.AZURE_STORAGE_SAS_TOKEN }}
 
-      - name: Deploy backend to Azure Web App
-        uses: azure/webapps-deploy@v3
-        with:
-          app-name: "cloud-native-backEnd"
-          slot-name: "Production"
-          package: ./back-end/app.zip
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_BACKEND }}
-  # Frontend build and deploy
-  build-frontend:
-    runs-on: ubuntu-latest
-    defaults:
-      run:
-        working-directory: ./front-end
+  build-and-deploy-functions:
+    runs-on: windows-latest
     steps:
-      - uses: actions/checkout@v4
-      - name: Set up Node.js
+      - name: "Checkout GitHub Action"
+        uses: actions/checkout@v3
+
+      - name: Setup Node ${{ env.NODE_VERSION }} Environment
         uses: actions/setup-node@v3
         with:
-          node-version: "20.x"
-      - run: npm install
-      - run: npm run build --if-present
+          node-version: ${{ env.NODE_VERSION }}
 
-  deploy-frontend:
-    runs-on: ubuntu-latest
-    needs: build-frontend
-    steps:
-      - uses: actions/checkout@v4
-      - name: Deploy frontend to Azure Web App
-        uses: azure/webapps-deploy@v3
+      - name: "Resolve Project Dependencies Using Npm"
+        shell: pwsh
+        run: |
+          pushd './${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}'
+          npm install
+          npm run build --if-present
+          npm run test --if-present
+          popd
+
+      - name: "Run Azure Functions Action"
+        uses: Azure/functions-action@v1
+        id: fa
         with:
-          app-name: "Cloud-Native-Engineering"
-          slot-name: "Production"
-          package: ./front-end
-          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_FRONTEND }}
+          app-name: ${{ env.AZURE_FUNCTIONAPP_NAME }}
+          package: ${{ env.AZURE_FUNCTIONAPP_PACKAGE_PATH }}
+          publish-profile: ${{ secrets.AZURE_FUNCTIONAPP_PUBLISH_PROFILE }}
