--- a/package.json
+++ b/package.json
@@ -8,10 +8,12 @@
   "dependencies": {
     "@azure/functions": "^4.7.2",
     "@prisma/client": "^6.7.0",
+    "@types/node-cache": "^4.1.3",
     "dotenv": "^16.4.5",
     "express": "^5.1.0",
     "next": "^15.3.1",
     "next-i18next": "^15.4.2",
+    "node-cache": "^5.1.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "root": "file:",
