--- a/.github/workflows/main_cloud-native-engineering.yml
+++ b/.github/workflows/main_cloud-native-engineering.yml
@@ -13,9 +13,9 @@ on:
 #
 # 2. Change these variables for your configuration:
 env:
-  AZURE_FUNCTIONAPP_NAME: "functionCloudNativeGroup25" # set this to your function app name on Azure
-  AZURE_FUNCTIONAPP_PACKAGE_PATH: "./azure-functions/" # set this to the path to your function app project, defaults to the repository root
-  NODE_VERSION: "18.x" # set this to the node version to use (e.g. '8.x', '10.x', '12.x')
+  AZURE_FUNCTIONAPP_NAME: "functionCloudNativeGroup25"
+  AZURE_FUNCTIONAPP_PACKAGE_PATH: "./azure-functions/"
+  NODE_VERSION: "18.x"
 
 jobs:
   upload-site:
