--- a/front-end/package.json
+++ b/front-end/package.json
@@ -1,9 +1,9 @@
 {
   "private": true,
   "scripts": {
-    "dev": "next dev -p 8081",
+    "dev": "next dev",
     "build": "next build",
-    "start": "npm run dev",
+    "start": "next start",
     "test": "jest"
   },
   "dependencies": {
