--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -2,7 +2,7 @@
   "name": "",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/*/*.js",
+  "main": "dist/*/{index.js,function.json}",
   "scripts": {
     "build": "tsc",
     "predeploy": "npm run build",
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/node": "20.x",
     "azure-functions-core-tools": "^4.x",
+    "esbuild": "^0.25.5",
     "rimraf": "^5.0.0",
     "typescript": "^4.0.0"
   },
