--- a/azure-functions/package.json
+++ b/azure-functions/package.json
@@ -2,9 +2,9 @@
   "name": "",
   "version": "1.0.0",
   "description": "",
-  "main": "dist/*/{index.js,function.json}",
+  "main": "dist/*/*.js",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && cpx './*/function.json' dist/**",
     "predeploy": "npm run build",
     "watch": "tsc -w",
     "clean": "rimraf dist",
@@ -23,6 +23,7 @@
   "devDependencies": {
     "@types/node": "20.x",
     "azure-functions-core-tools": "^4.x",
+    "cpx": "^1.5.0",
     "esbuild": "^0.25.5",
     "rimraf": "^5.0.0",
     "typescript": "^4.0.0"
