--- a/.github/workflows/main_cloud-native-engineering.yml
+++ b/.github/workflows/main_cloud-native-engineering.yml
@@ -66,6 +66,11 @@ jobs:
             Copy-Item -Path $_.FullName -Destination $destDir -Force
           }
 
+      - name: "Debug: List dist folder contents"
+        shell: pwsh
+        run: |
+          Get-ChildItem -Path "./azure-functions/dist" -Recurse
+
       - name: "Run Azure Functions Action"
         uses: Azure/functions-action@v1
         with:
