--- a/azure-functions/tsconfig.json
+++ b/azure-functions/tsconfig.json
@@ -3,10 +3,11 @@
     "module": "commonjs",
     "target": "es6",
     "outDir": "dist",
-    "rootDir": "./",
+    "rootDir": "src",
     "sourceMap": true,
     "strict": false,
     "esModuleInterop": true,
     "allowSyntheticDefaultImports": true
-  }
+  },
+  "include": ["src/**/*"]
 }
