--- a/.github/workflows/main_cloud-native-engineering.yml
+++ b/.github/workflows/main_cloud-native-engineering.yml
@@ -53,18 +53,25 @@ jobs:
           npm run build
           popd
 
-      # - name: "Copy function.json files to dist"
-      #   shell: pwsh
-      #   run: |
-      #     $root = "./azure-functions"
-      #     $distRoot = "$root/dist/src"
-      #     Get-ChildItem -Path $root -Recurse -Filter "function.json" | ForEach-Object {
-      #       if ($_.FullName -like "*dist*") { return }  # Skip ones already in dist
-      #       $srcFuncDir = Split-Path $_.FullName -Parent
-      #       $funcName = Split-Path $srcFuncDir -Leaf
-      #       $destDir = Join-Path $distRoot $funcName
-      #       Copy-Item -Path $_.FullName -Destination $destDir -Force
-      #     }
+      - name: "Copy function.json files to dist"
+        shell: pwsh
+        run: |
+          $root = "./azure-functions"
+          $distRoot = "$root/dist/src"
+
+          Get-ChildItem -Path $root -Recurse -Filter "function.json" | ForEach-Object {
+            if ($_.FullName -like "*dist*") { return }  # Skip ones already in dist
+
+            $relativePath = $_.FullName.Substring($root.Length).TrimStart('\','/')
+            $destPath = Join-Path $distRoot $relativePath
+            $destDir = Split-Path $destPath -Parent
+
+            if (-not (Test-Path $destDir)) {
+              New-Item -ItemType Directory -Path $destDir | Out-Null
+          }
+
+          Copy-Item -Path $_.FullName -Destination $destPath -Force
+          }
 
       - name: "Debug: List dist folder contents"
         shell: pwsh
