--- a/.github/workflows/main_cloud-native-engineering.yml
+++ b/.github/workflows/main_cloud-native-engineering.yml
@@ -76,7 +76,7 @@ jobs:
       - name: "Debug: List dist folder contents"
         shell: pwsh
         run: |
-          Get-ChildItem -Path "./azure-functions/dist/src" -Recurse
+          Get-ChildItem -Path "./azure-functions/dist" -Recurse
 
       - name: "Run Azure Functions Action"
         uses: Azure/functions-action@v1
