--- a/.github/workflows/main_cloud-native-engineering.yml
+++ b/.github/workflows/main_cloud-native-engineering.yml
@@ -71,10 +71,10 @@ jobs:
             Copy-Item -Path "$srcFuncDir/*" -Destination $destFuncDir -Recurse -Force
           }
 
-      - name: "Debug: List dist folder contents"
-        shell: pwsh
-        run: |
-          Get-ChildItem -Path "./azure-functions/dist" -Recurse
+      # - name: "Debug: List dist folder contents"
+      #   shell: pwsh
+      #   run: |
+      #     Get-ChildItem -Path "./azure-functions/dist" -Recurse
 
       - name: "Run Azure Functions Action"
         uses: Azure/functions-action@v1
