de hele back end is totaal veranderd have fun xd

--- a/azure-functions/tsconfig.json
+++ b/azure-functions/tsconfig.json
@@ -9,5 +9,5 @@
     "resolveJsonModule": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*", "back-end/**/*"]
+  "include": ["src/**/*", "back-end/**/*", "util"]
 }
