--- a/azure-functions/tsconfig.json
+++ b/azure-functions/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": ".",
+    "rootDir": "src",
     "target": "ES2020",
     "module": "commonjs",
     "esModuleInterop": true,
@@ -9,13 +9,5 @@
     "resolveJsonModule": true,
     "skipLibCheck": true
   },
-  "include": [
-    "src/**/*",
-    "repository/**/*",
-    "service/**/*",
-    "helpers/**/*",
-    "mongo-models/**/*",
-    "util/**/*",
-    "types/**/*"
-  ]
+  "include": ["src/**/*"]
 }
