--- a/azure-functions/tsconfig.json
+++ b/azure-functions/tsconfig.json
@@ -1,7 +1,7 @@
 {
   "compilerOptions": {
     "outDir": "dist",
-    "rootDir": "src",
+    "rootDir": "./",
     "target": "ES2020",
     "module": "commonjs",
     "esModuleInterop": true,
@@ -9,5 +9,5 @@
     "resolveJsonModule": true,
     "skipLibCheck": true
   },
-  "include": ["src/**/*"]
+  "include": ["src/**/*", "back-end/**/*", "util"]
 }
