--- a/azure-functions/tsconfig.json
+++ b/azure-functions/tsconfig.json
@@ -7,7 +7,11 @@
     "esModuleInterop": true,
     "moduleResolution": "node",
     "resolveJsonModule": true,
-    "skipLibCheck": true
+    "skipLibCheck": true,
+    "baseUrl": "./src",
+    "paths": {
+      "*": ["*", "../src/*"]
+    }
   },
   "include": ["src/**/*", "back-end/**/*", "util"]
 }
