--- a/azure-functions/.funcignore
+++ b/azure-functions/.funcignore
@@ -2,14 +2,10 @@
 *.ts
 .git*
 .vscode
+__azurite_db*__.json
+__blobstorage__
+__queuestorage__
 local.settings.json
 test
-getting_started.md
-node_modules/@types/
-node_modules/azure-functions-core-tools/
-node_modules/typescript/
-back-end/
-*.ts
-src/
 tsconfig.json
-
+frontend
