--- a/.github/workflows/main_cloud-native-engineering.yml
+++ b/.github/workflows/main_cloud-native-engineering.yml
@@ -98,6 +98,11 @@ jobs:
         run: |
           Copy-Item -Path "./azure-functions/host.json" -Destination "./azure-functions/dist" -Force
 
+      - name: "Copy package.json to dist"
+        shell: pwsh
+        run: |
+          Copy-Item -Path "./azure-functions/package.json" -Destination "./azure-functions/dist" -Force
+
       - name: Install production dependencies in dist
         shell: pwsh
         run: |
